--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "version": "0.1.0",
   "author": "GatsbyCentral.com",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "bulma": "^0.7.0",
     "gatsby": "^2.0.0",
     "gatsby-awesome-pagination": "^0.3.3",
+    "gatsby-graphiql-explorer": "^0.2.3",
+    "gatsby-image": "^2.2.8",
     "gatsby-plugin-lodash": "^3.0.1",
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-purgecss": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.0.5",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-remark-images": "^2.0.1",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-source-wordpress": "^3.0.1",
     "gatsby-transformer-remark": "^2.1.1",
     "gatsby-transformer-sharp": "^2.1.1",
+    "graphiql-explorer": "^0.4.3",
     "lodash": "^4.17.5",
     "node-sass": "^4.9.2",
     "parcel-bundler": "^1.9.4",
@@ -25,6 +30,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "styled-components": "^4.3.2",
     "uuid": "^3.2.1"
   },
   "keywords": [
