--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.7.0",
     "styled-components": "^4.3.2",
     "uuid": "^3.2.1"
   },
